Fix column overflow. 679e789e661d161b665e474b5fbcdf8160a0ab14

--- a/assets/styles/common.css
+++ b/assets/styles/common.css
@@ -1131,6 +1131,7 @@ body > main > article ul,
 body > main > article ol {
 	display: grid;
 	gap: var(--typography--between);
+	grid-template-columns: minmax(0, 1fr);
 	list-style-position: outside;
 }
 
